--- a/sections/scroll-ticker.liquid
+++ b/sections/scroll-ticker.liquid
@@ -32,48 +32,45 @@
   }
 
   .scroll-ticker, .ticker-wrap {
-    background-color: #000000;
+    background-color: rgb(var(--section-background));
   }
 
   .scroll-ticker, .ticker-wrap {
-      overflow: hidden;
-  }
-
-  .scroll-ticker, .ticker-wrap {
-      background-color: #000000;
+    overflow: hidden;
   }
 
   .ticker-wrap {
-      width: 100%;
-      padding-left: 100%;
-      box-sizing: content-box!important;
+    width: 100%;
+    padding-left: 100%;
+    box-sizing: content-box!important;
   }
 
   .scroll-ticker, .ticker-wrap {
-      overflow: hidden;
+    overflow: hidden;
   }
 
   .ticker-wrap .ticker {
-      display: inline-block;
-      height: 4rem;
-      line-height: 4rem;
-      white-space: nowrap;
-      padding-right: 100%;
-      box-sizing: content-box;
-      animation-iteration-count: infinite;
-      animation-timing-function: linear;
-      animation-name: ticker;
-      animation-duration: var(--ticker-animation-duration);
+    display: inline-block;
+    height: 4rem;
+    line-height: 4rem;
+    white-space: nowrap;
+    padding-right: 100%;
+    box-sizing: content-box;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-name: ticker;
+    animation-duration: var(--ticker-animation-duration);
   }
 
   .ticker-wrap .ticker__item {
-      display: inline-block;
-      padding: 0 2rem;
-      margin-right: 30vw;
+    display: inline-block;
+    padding: 0 2rem;
+    margin-right: 30vw;
+    color: rgb(var(--text-color));
   }
 
   .ticker__item, .ticker__item a {
-      color: #ffffff;
+    color: rgb(var(--text-color));
   }
 </style>
 
