--- a/sections/scroll-ticker.liquid
+++ b/sections/scroll-ticker.liquid
@@ -60,7 +60,7 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-name: ticker;
-    animation-duration: var(--ticker-animation-duration);
+    animation-duration: var(--ticker-animation-duration)s;
   }
 
   .ticker-wrap .ticker__item {
