--- a/assets/theme.css
+++ b/assets/theme.css
@@ -15873,7 +15873,7 @@ textarea:focus.mini-cart__message-textarea {
 
   .footer__bottom-links {
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
     justify-content: center;
     list-style: none;
     color: rgba(var(--footer-text-color), 0.7);
