--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -165,26 +165,26 @@
                 {{ content_for_order_summary }} 
                 <div class="sidebar__reassurance hidden">
                   <p class="">
-                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/question.svg?v=1670331445" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/question.svg?v=1670335422" alt="">
                     <strong>
-                      Une question ?
+                      {{ 'custom_checkout.reinsurance.question' | t }}
                       <a href="mailto:hello@aglaiaco.com" target="_blank" class="d-block d-md-inline">hello@aglaiaco.com</a></strong>
                   </p>
                   <p class="">
-                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/livraison.svg?v=1670331445" alt="">
-                    <strong>Livraison gratuite dès 79€ d'achats</strong>
+                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/livraison.svg?v=1670335423" alt="">
+                    <strong>{{ 'custom_checkout.reinsurance.delivery' | t }}</strong>
                   </p>
                   <p class="">
-                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/retours.svg?v=1670331445" alt="">
-                    <strong>Retours gratuits en France métropolitaine sous 30 jours</strong>
+                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/retours.svg?v=1670335422" alt="">
+                    <strong>{{ 'custom_checkout.reinsurance.return' | t }}</strong>
                   </p>
                   <p class="">
-                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/ecolo.svg?v=1670331582" alt="">
-                    <strong>Expédition écologique</strong>
+                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/ecolo.svg?v=1670335422" alt="">
+                    <strong>{{ 'custom_checkout.reinsurance.ecology' | t }}</strong>
                   </p>
                   <p class="">
-                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/client.svg?v=1670331444" alt="">
-                    <strong>+De 50 000 client(e)s nous font confiance</strong>
+                    <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/client.svg?v=1670335422" alt="">
+                    <strong>{{ 'custom_checkout.reinsurance.customer' | t }}</strong>
                   </p>
                 </div>
               </div>
