--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -163,7 +163,7 @@
               </div>
               <div class="sidebar__content">
                 {{ content_for_order_summary }} 
-                <div class="sidebar__reassurance hidden">
+                <div class="sidebar__reassurance">
                   <p class="">
                     <img src="https://cdn.shopify.com/s/files/1/0633/8120/9318/files/question.svg?v=1670335422" alt="">
                     <strong>
