--- a/snippets/checkout-header.liquid
+++ b/snippets/checkout-header.liquid
@@ -33,7 +33,7 @@
     </span>
   </span>
   <span class="header__mini-cart-icon">
-    {%- render 'icon' with 'header-tote-bag' -%}
+    {%- render 'icon' with 'header-cart' -%}
     <span class="header__mini-cart-count">
       <span class="header__mini-cart-item-count">{{ total_item_count }}</span>
     </span>
