Changes link announcement

--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -134,7 +134,7 @@
   {%- endif -%}
 {%- else -%}
   <section>
-    <div class="announcement-bar flex-container">
+    <a href="https://www.instagram.com/aglaiaco/" class="announcement-bar flex-container">
       <div class="flex-items">
         <div class="copies">
             <div class="line-1">{{ section.settings.line_1 }}</div>
@@ -165,7 +165,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </a>
   <script>
     document.documentElement.style.setProperty('--announcement-bar-height', document.getElementById('shopify-section-{{ section.id }}').clientHeight + 'px');
     window.onload = function () {
