--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -134,7 +134,7 @@
   {%- endif -%}
 {%- else -%}
   <section>
-    <a href="https://www.instagram.com/aglaiaco/" class="announcement-bar flex-container">
+    <a href="https://www.instagram.com/aglaiaco/" class="announcement-bar flex-container" target="_blank">
       <div class="flex-items">
         <div class="copies">
             <div class="line-1">{{ section.settings.line_1 }}</div>
