--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -164,8 +164,8 @@
             </div>
         </div>
       </div>
-    </div>
-  </a>
+    </a>
+  </section>
   <script>
     document.documentElement.style.setProperty('--announcement-bar-height', document.getElementById('shopify-section-{{ section.id }}').clientHeight + 'px');
     window.onload = function () {
