--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -116,7 +116,7 @@
           window.cartContent = {
             hasCustomItem: {{ has_custom_item }},
             hasPreorderItem: {{ has_preorder_item }},
-            hasDeliveryInfo: true,
+            hasDeliveryInfo: false,
             alertTitle: "{{ 'custom_checkout.alert_title' | t }}",
             alertDescription: "{{ 'custom_checkout.alert_description' | t }}",
             preorderDescription: "{{ 'custom_checkout.preorder_description' | t }}",
