--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -30,15 +30,27 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
         {% else %}
           {{ page_title }}
           {% if current_page != 1 %}
-            &ndash; {{ 'general.meta.page' | t: page: current_page }}
+            | {{ 'general.meta.page' | t: page: current_page }}
           {% endif %}
         {% endif %}
-        &ndash; {{ shop.name }}
+        | {{ shop.name }}
       {% endif %}
     </title>
 
     {%- if page_description -%}
       <meta name="description" content="{{ page_description | escape }}">
+    {%- endif -%}
+
+    {%- if request.page_type == 'product' -%}
+      {% if  product.metafields.custom.no_index %}
+        <meta name="robots" content="noindex">
+      {% endif %}
+    {%- endif -%}
+
+    {%- if request.page_type == 'collection' -%}
+      {% if collection.metafields.custom.no_index %}
+        <meta name="robots" content="noindex">
+      {% endif %}
     {%- endif -%}
 
     {%- if request.page_type == 'product' -%}
