--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -56,11 +56,11 @@
 
         <div class="content-box content-box--{{ section.settings.text_width }} content-box--text-{{ text_alignment }} content-box--{{ text_position }} text-container">
           {%- if section.settings.subheading != blank -%}
-            <h2 class="heading heading--small">{{ section.settings.subheading | escape }}</h2>
+            <{{ section.settings.subheading_type}} class="heading heading--small">{{ section.settings.subheading | escape }}</{{ section.settings.subheading_type}}>
           {%- endif -%}
 
           {%- if section.settings.title != blank -%}
-              <{{ section.settings.title_heading}} class="heading h2">{{ section.settings.title | escape }}</{{ section.settings.title_heading}}>
+              <{{ section.settings.title_type}} class="heading h2">{{ section.settings.title | escape }}</{{ section.settings.title_type}}>
           {%- endif -%}
 
           {%- if section.settings.content != blank -%}
@@ -91,8 +91,8 @@
     },
     {
       "type": "select",
-      "id": "subheading_heading",
-      "label": "Subheading heading",
+      "id": "subheading_type",
+      "label": "Subheading type",
       "options": [
         {
           "value": "h1",
@@ -129,8 +129,8 @@
     },
     {
       "type": "select",
-      "id": "title_heading",
-      "label": "Title heading",
+      "id": "title_type",
+      "label": "Heading type",
       "options": [
         {
           "value": "h1",
