Changes canonical url for blog

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -61,6 +61,10 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       {%- endif -%}
     {%- endif -%}
 
+    {%- if request.page_type == 'blog' -%}
+      <link rel="canonical" href="{{ canonical_url }}">
+    {%- endif -%}
+
     {%- if settings.favicon -%}
       <link rel="shortcut icon" href="{{ settings.favicon | img_url: '96x96' }}" type="image/png">
     {%- endif -%}
