--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -47,6 +47,10 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       {% endif %}
     {%- endif -%}
 
+    {% if template == 'list-collections' %}
+      <meta name="robots" content="noindex">
+    {%- endif -%}
+
     {%- if request.page_type == 'collection' -%}
       {% if collection.metafields.custom.no_index %}
         <meta name="robots" content="noindex">
