Changes product item

--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -308,7 +308,7 @@
               </div>
               <script type="application/json" data-colors-json>
                 {
-                  {%- for grouped_product in grouped_products -%}
+                  {%- for grouped_product in grouped_products limit:5 -%}
                     {%- capture image_featured -%}
                       <img class="product-item__primary-image" loading="lazy" data-media-id="{{ grouped_product.featured_media.id | escape }}" sizes="{{ sizes_attribute }}" {% render 'image-attributes', image: grouped_product.featured_media, sizes: '200,300,400,500,600,700,800,900,1000,1100,1200' %}>
                     {%- endcapture -%}
