Changes canonnical urls

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,6 +51,10 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       <meta name="robots" content="noindex">
     {%- endif -%}
 
+    {% if request.page_type == 'search' %}
+      <meta name="robots" content="noindex">
+    {%- endif -%}
+
     {%- if request.page_type == 'collection' -%}
       {% if collection.metafields.custom.no_index %}
         <meta name="robots" content="noindex">
@@ -65,7 +69,9 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       {%- endif -%}
     {%- endif -%}
 
-    {%- if request.page_type == 'blog' -%}
+    {%- if request.page_type == 'blog' && current_tags -%}
+      <link rel="canonical" href="{{ shop.url }}{{ blog.url }}">
+    {%- else -%}
       <link rel="canonical" href="{{ canonical_url }}">
     {%- endif -%}
 
