--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,7 +51,7 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       <meta name="robots" content="noindex">
     {%- endif -%}
 
-    {% if request.page_type == 'search' %}
+    {% if request.page_type == 'search' || request.page_type == 'policy' || request.page_type == 'cart' || request.page_type == 'customers/login' %}
       <meta name="robots" content="noindex">
     {%- endif -%}
 
