--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -79,6 +79,9 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       <link rel="shortcut icon" href="{{ settings.favicon | img_url: '96x96' }}" type="image/png">
     {%- endif -%}
 
+    {%- comment -%}Pinterest{%- endcomment -%}
+    <meta name="p:domain_verify" content="400b1576b8ac3b489ca98c33278890b3"/>
+
     {%- comment -%}Few prefech to increase performance on commonly used third-parties{%- endcomment -%}
     <link rel="preconnect" href="https://cdn.shopify.com">
     <link rel="dns-prefetch" href="https://productreviews.shopifycdn.com">
