Changes product url

--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -53,7 +53,7 @@
       </div>
     {%- endif -%}
 
-    <a href="{%- if hide_collection -%}{{ product.url }}{% else %}{{ product.url | within: collection }}{% endif %}" class="product-item__aspect-ratio aspect-ratio {% if settings.product_image_size != 'natural' %}aspect-ratio--{{ settings.product_image_size }}{% endif %}" style="padding-bottom: {{ 100.0 | divided_by: product.featured_media.preview_image.aspect_ratio }}%; --aspect-ratio: {{ product.featured_media.preview_image.aspect_ratio }}">
+    <a href="{%- if hide_collection -%}{{ product.url }}{% else %}{{ product.url }}{% endif %}" class="product-item__aspect-ratio aspect-ratio {% if settings.product_image_size != 'natural' %}aspect-ratio--{{ settings.product_image_size }}{% endif %}" style="padding-bottom: {{ 100.0 | divided_by: product.featured_media.preview_image.aspect_ratio }}%; --aspect-ratio: {{ product.featured_media.preview_image.aspect_ratio }}">
       <img class="product-item__primary-image" loading="lazy" data-media-id="{{ product.featured_media.id | escape }}" sizes="{{ sizes_attribute }}" {% render 'image-attributes', image: product.featured_media, sizes: '200,300,400,500,600,700,800,900,1000,1100,1200' %}>     
       {%- if settings.show_secondary_image and product.media.size > 1 and hide_secondary_image != true -%}
         {%- assign next_media = product.media[product.featured_media.position] | default: product.media[1] -%}
@@ -115,7 +115,7 @@
         {%- endunless -%}
       {%- endif -%}
 
-      <a href="{%- if hide_collection -%}{{ product.url }}{% else %}{{ product.url | within: collection }}{% endif %}" class="product-item-meta__title">{{ product.title }}</a>
+      <a href="{%- if hide_collection -%}{{ product.url }}{% else %}{{ product.url }}{% endif %}" class="product-item-meta__title">{{ product.title }}</a>
 
       <div class="product-item-meta__price-list-container">
         <div class="price-list price-list--centered">
@@ -277,7 +277,7 @@
                 {%- assign number_of_options = 0 -%}
                 {%- for grouped_product in grouped_products -%}
                   {%- if number_of_options > 4 -%}
-                    <a href="{%- if hide_collection -%}{{ product.url }}{% else %}{{ product.url | within: collection }}{% endif %}" class="more-options">
+                    <a href="{%- if hide_collection -%}{{ product.url }}{% else %}{{ product.url }}{% endif %}" class="more-options">
                       <div class="more-options__item">
                         {%- render 'icon' with 'plus' -%}
                       </div>
@@ -498,7 +498,7 @@
                       {%- assign color_value_downcase = value | downcase -%}
                       {%- assign variant_for_value = product.variants | where: variant_option, value | first -%}
                       {%- if number_of_options > 5 -%}
-                        <a href="{%- if hide_collection -%}{{ product.url }}{% else %}{{ product.url | within: collection }}{% endif %}" class="more_options">
+                        <a href="{%- if hide_collection -%}{{ product.url }}{% else %}{{ product.url }}{% endif %}" class="more_options">
                           {%- render 'icon' with 'plus' -%}
                         </a>
                         {%- break -%}
