--- a/sections/wishlist.liquid
+++ b/sections/wishlist.liquid
@@ -5,34 +5,66 @@
 
   @media screen and (min-width: 741px) {
     #shopify-section-{{ section.id }} {
-      {%- assign remainder_for_two = section.settings.products_per_page | modulo: 2 -%}
-      {%- assign remainder_for_desktop_count = section.settings.products_per_page | modulo: section.settings.desktop_products_per_row -%}
-
-      --section-products-per-row: {% if remainder_for_two == 0 and remainder_for_desktop_count == 0 %}2{% else %}3{% endif %};
+      --section-products-per-row: {{ section.settings.desktop_products_per_row | times: 1 }};
     }
   }
-
-  {%- if section.settings.filter_position == 'drawer' -%}
-    @media screen and (min-width: 1200px) {
-      #shopify-section-{{ section.id }} {
-        --section-products-per-row: {{ section.settings.desktop_products_per_row }};
-      }
-    }
-  {%- else -%}
-    @media screen and (min-width: 1400px) {
-      #shopify-section-{{ section.id }} {
-        --section-products-per-row: {{ section.settings.desktop_products_per_row }};
-      }
-    }
-  {%- endif -%}
 </style>
 
 <section>
   <div class="container">
+    <div class="content-box content-box--large content-box--text-center content-box--center text-container hidden" style="padding:30px 0px">
+      {%  if customer %}
+        <button type="button" is="toggle-button" id="toggle-wishlist-button" class="button button--primary hidden" aria-controls="product-{{ section.id }}-share-wishlist-drawer" aria-expanded="false"%}>Partager la wishlist</button>
+      {% else %}
+        <div>Vous souhaitez partager votre wishlist? Pour cela, merci de <a href="/account/login?checkout_url=/pages/wishlist" class="text--underlined text--xsmall text--strong">vous connecter</a> ou de <a href="/account/register?checkout_url=/pages/wishlist" class="text--underlined text--xsmall text--strong">créer un compte</a>.</div>
+      {%  endif %}
+    </div>
+    {% if customer %}  
+      <drawer-content id="product-{{ section.id }}-share-wishlist-drawer" class="drawer drawer--large">
+        <span class="drawer__overlay"></span>
+        <header class="drawer__header">
+          <p class="drawer__title heading h6">Partagez votre wishlist</p>
+          <button type="button" class="drawer__close-button tap-area" data-action="close" title="{{ 'general.accessibility.close' | t | escape }}">
+            {%- render 'icon' with 'close' -%}
+          </button>
+        </header>
+        <div class="drawer__content drawer__content--padded-start">
+          <div class="rte">
+            <div class="share__section share__link">
+              <div class="heading heading--small">Lien à partager</div>
+              <div>Vous trouverez ci-dessous le lien vers votre wishlist. Partagez le sans plus attendre!</div>
+              <div class="input">
+                <input id="copyLink" type="text" class="input__field input__field--text" readonly>
+                <label for="copyLink" class="input__label">Lien</label>
+              </div> 
+              </br>
+              <div class="heading heading--small">Envoyez votre wishlist par email</div>
+              <div id="share-form"></div>
+              <form class="form" id="share-wishlist-form">
+                <div class="input">
+                  <input id="share-sender" name="fromName" type="text" class="input__field input__field--text">
+                  <label for="share-sender" class="input__label">Votre nom</label>
+                </div>
+                <div class="input">
+                  <input id="share-email" name="toEmailId" type="text" class="input__field input__field--text">
+                  <label for="share-email" class="input__label">Email du destinataire</label>
+                </div>
+                <div class="input">
+                  <input id="share-message" name="note" type="textarea" class="input__field input__field--text">
+                  <label for="share-message" class="input__label">Votre message</label>
+                </div>
+                <input id="share-lid" name="lid" type="hidden">
+                <button type="submit" is="loader-button" class="form__submit button button--primary button--full">ENVOYER</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </drawer-content>
+   {% endif %}
     <product-facet section-id="{{ section.id }}" class="product-facet"> 
       <div id="facet-main" class="product-facet__main anchor" role="region" aria-live="polite">
         <product-list {% if settings.stagger_products_apparition %}stagger-apparition{% endif %} class="product-facet__product-list product-list anchor">
-          <div grid-wishlist data-empty="{{ 'customer.wishlist.empty' | t }}">
+          <div id="wishlist-items-container">
             <p class="wishlist__loader">
               <div class="spinner">
                 {%- render 'icon' with 'spinner', stroke_width: 3, width: 40, height: 40 -%}
@@ -44,6 +76,22 @@
     </div>
   </div>
 </section>
+
+<script src="{{ 'wishlist.js' | asset_url }}" async="async"></script>
+<!-- Swym Custom Page CSS  -->
+<style>
+  button.swym-delete-btn.swym-nav.swym-nav-1.swym-is-button {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    width: 15px;
+    height: 15PX;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index : 1000;
+  }
+</style>
 
 {% schema %}
   {
