Changes shared wishlist

--- a/sections/shared-wishlist.liquid
+++ b/sections/shared-wishlist.liquid
@@ -48,7 +48,7 @@
 
 {% schema %}
   {
-    "name": "Wishlist page",
+    "name": "Shared wishlist page",
     "class": "shopify-section--main-wishlist",
     "settings": [
       {
