--- a/sections/wishlist.liquid
+++ b/sections/wishlist.liquid
@@ -12,7 +12,7 @@
 
 <section>
   <div class="container">
-    <div class="content-box content-box--large content-box--text-center content-box--center text-container hidden" style="padding:30px 0px">
+    <div class="content-box content-box--large content-box--text-center content-box--center text-container" style="padding:30px 0px">
       {%  if customer %}
         <button type="button" is="toggle-button" id="toggle-wishlist-button" class="button button--primary hidden" aria-controls="product-{{ section.id }}-share-wishlist-drawer" aria-expanded="false"%}>Partager la wishlist</button>
       {% else %}
