--- a/sections/wishlist.liquid
+++ b/sections/wishlist.liquid
@@ -50,7 +50,7 @@
                   <label for="share-email" class="input__label">Email du destinataire</label>
                 </div>
                 <div class="input">
-                  <textarea id="share-message" name="note" class="input__field input__field--textarea">
+                  <textarea id="share-message" name="note" class="input__field input__field--textarea"></textarea>
                   <label for="share-message" class="input__label">Votre message</label>
                 </div>
                 <input id="share-lid" name="lid" type="hidden">
